--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h4><p align="left">Tugas Zahra Naziha Parinduri</p></h4>
     <p align="left">Tugas 1
-        <a href="">Tugas 1</a>
+        <a href="https://zahranaziha.github.io/zahraa/">Tugas1</a>
     </p>
     <p align="left">Tugas 2
-        <a href="">Tugas 2</a>
+        <a href=" https://zahranaziha.github.io/Tugas-2/">Tugas2</a>
     </p>
 </body>
 </html>
